<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">起こしﾀﾛｳ</string>

    <string name="start_message">起こしタロウ</string>
    <string name="start">Start</string>
    <string name="action_settings">設定</string>
    <string name="action_store_alarm">登録</string>
    <string name="action_update_alarm">更新</string>
    <string name="action_delete_alarm">アラーム削除</string>
    <string name="action_snooze">スヌーズ (5分)</string>

    <string name="title_activity_alarm_list">アラーム一覧</string>
    <string name="title_activity_alarm_register">アラーム登録</string>
    <string name="title_activity_alarm_update">アラーム更新</string>
    <string name="title_activity_setting">設定</string>
    <string name="title_dialog_disabled_bluetooth">Bluetooth 無効</string>
    <string name="title_dialog_ble_searching">タロウのエサ 探索中</string>
    <string name="title_dialog_ble_select">タロウのエサを選択</string>
    <string name="title_dialog_usated_device">タロウのエサ 未確認</string>
    <string name="title_dialog_motion_waiting">タロウのエサ 連携確認中</string>
    <string name="title_dialog_alarm_validation_failure">アラーム情報 確認</string>

    <string name="message_dialog_disabled_bluetooth">Bluetooth を有効にしてください。</string>
    <string name="message_dialog_ble_searching">タロウのエサを探しています&#8230;</string>
    <string name="message_dialog_usated_device">タロウのエサを先に探してください。</string>
    <string name="message_dialog_motion_waiting">タロウのエサに設置されたセンサーを使って連携確認をしています&#8230;</string>
    <string name="message_found_ble">タロウのエサ (%1$s) が見つかりました!!</string>
    <string name="message_motion_success">タロウのエサと連携できました!!</string>
    <string name="message_not_found_ble">タロウのエサが見つかりませんでした。。。</string>
    <string name="message_motion_failure">タロウのエサと連携できませんでした。。。</string>
    <string name="message_store_alarm">アラームを登録しました。</string>
    <string name="message_update_alarm">アラームを更新しました。</string>
    <string name="message_delete_alarm">アラームを削除しました。</string>
    <string name="message_alarm_list_empty">まずは右上の設定から\nタロウのエサを探して!!\n\nその後でアラームを\n登録してください!!</string>
    <string name="message_alarm">早く起きて!!\nエサまで急げ!!</string>
    <string name="message_alarm_stop_success">Good Morning!!</string>
    <string name="message_snooze">スヌーズ設定 (5分) をしました。</string>
    <string name="message_day_of_week_not_selected">アラームを鳴らす曜日を 1 つ以上選択してください。</string>
    <string name="message_alarm_changed_ignore">アラーム情報が変更されていますが、戻りますか?</string>

    <!-- On Development Message -->
    <string name="message_alarm_delete_all">アラーム情報を全て削除しました。</string>
    <string name="message_alarm_delete_none">削除するアラーム情報はありませんでした。</string>

    <!-- alarm titles -->
    <string name="title_alarm_time">時間</string>
    <string name="title_alarm_day_of_week">曜日</string>
    <string name="title_alarm_ringtone">アラーム音</string>
    <string name="title_setting_try_connect">タロウのエサを探す</string>
    <string name="title_setting_try_censor">タロウのエサとの連携確認</string>
    <string name="title_setting_alarm_volume">アラーム音量</string>
    <string name="title_setting_version">バージョン</string>

    <!-- alarm labels -->
    <string name="label_alarm_mon">月</string>
    <string name="label_alarm_tue">火</string>
    <string name="label_alarm_wed">水</string>
    <string name="label_alarm_thu">木</string>
    <string name="label_alarm_fri">金</string>
    <string name="label_alarm_sat">土</string>
    <string name="label_alarm_sun">日</string>
    <string name="label_alarm_none">なし</string>
    <string name="label_alarm_everyday">毎日</string>
    <string name="label_alarm_weekday">平日</string>
    <string name="label_alarm_weekend">週末</string>
    <string name="label_alarm_silent">サイレント</string>

    <string name="label_mute">ミュート</string>
</resources>
